# magpipe

./: Cargo.toml
crates/magpipe/: Cargo.toml
crates/mailpipe/: Cargo.toml  README.md
crates/mailpipe/src/: imap.rs  lib.rs
