[package]
name = "magpipe"
version = "0.0.1"
authors = ["Watson Wheeler <me@tazy.dev>"]
description = "The decentralized power of a mailing list, wrapped in the comfort of a real-time chat app."
edition = "2024"
license = "MIT"

[dependencies]
mailpipe = { version = "0.0.1", path = "../mailpipe" }

# Only frontend based dependencies here
ratatui = "0.26"