[package]
name = "mailpipe"
version = "0.0.1"
authors = ["Watson Wheeler <me@tazy.dev>"]
description = "A unified, high-level SMTP and IMAP email engine backend library for Rust."
edition = "2024"
resolver = "3" # Fixes the 2024 edition resolver warning

[dependencies]
tokio = { version = "1.0", features = ["full"] }
lettre = { version = "0.11" }
async-imap = { version = "0.11.2", features = ["runtime-tokio"] } 
tokio-native-tls = "0.3"
tokio-util = { version = "0.7", features = ["compat"] } 
