[package]
name = "mailpipe"
version = "0.1.0"
authors = ["Watson Wheeler <me@tazy.dev>"]
description = "A unified, high-level SMTP and IMAP email engine backend library for Rust."
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
lettre = { version = "0.11" }
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-native-tls = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
